--- a/settings.json
+++ b/settings.json
@@ -1,22 +1,43 @@
 {
+
     "self_mode": false,
+
 	"autobio": false,
+
 	"antihidetag": true,
+
 	"user_register": false,
+
 	"anti_delete" : false,
+
 	"anticall": true,
+
 	"auto_welcome_msg": true,
+
 	"auto_leave_msg": true,
+
 	"prefix": ".",
+
 	"language":"ind",
-	"ownerNumber": "62887435047326",
-	"ownerNumberr": "62887435047326",
+
+	"ownerNumber": "6289522724388",
+
+	"ownerNumberr": "6289522724388",
+
 	"cr": "@ZeeoneOfcོ",
-	"ownername": "ZeeoneOfcོ",
-	"botname":"ALPHABOT",
+
+	"ownername": "ImanOfcོ",
+
+	"botname":"IMANBOT",
+
 	"thumb":"thumbnail_1.jpg",
+
 	"thumbnail":"thumbnail_2.jpg",
+
 	"fakethumb":"thumbnail_1.jpg", 
+
 	"donasi":"donasi.jpg",
-	"fake": " 「  ALPHABOT  」\nCreated By @ZeeoneOfcོ"
+
+	"fake": " 「  IMANBOT  」\nCreated By ImanOfcོ"
+
 }
